fix: UI for app start password prompt

--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -33,7 +33,7 @@
     &-error-section {
       width: 100%;
       color: $session-color-white;
-      margin: -var(--margins-sm) 0px 2 * $session-margin-lg 0px;
+      margin: var(--margins-sm);
 
       .session-label {
         &.primary {
