fix: copy of login screen with password and setting screen

--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -1,8 +1,16 @@
 .password {
   height: 100vh;
+  color: white; //TODO theming update
 
   .clear-data-wrapper {
-    margin: auto;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    background-color: $session-color-black;
+
+    .clear-data-container {
+      margin: auto;
+    }
 
     .warning-info-area {
       display: flex;
