feat: themed CompositionBox and related components

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -959,7 +959,8 @@
 }
 
 // Module: Caption Editor
-// TODO Theming We don't seem to use this can we delete?
+// TODO Theming We don't seem to use this can we delete?'
+// TODO we will probably remove this and the related component.
 .module-caption-editor {
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 20;
