--- a/stylesheets/_session_signin.scss
+++ b/stylesheets/_session_signin.scss
@@ -2,7 +2,7 @@
   &-fullscreen {
     width: 100%;
     height: 100%;
-    background-color: var(--color-white-color);
+    background-color: var(--background-primary-color);
   }
   &-content {
     &-accent {
@@ -56,7 +56,7 @@
     }
 
     @mixin registration-label-mixin {
-      color: var(--color-text);
+      color: var(--text-primary-color);
 
       font-weight: bold;
       padding: 20px;
@@ -90,7 +90,7 @@
     height: 46.5px;
     width: 280px;
     font-family: $session-font-default;
-    color: var(--color-text);
+    color: var(--text-primary-color);
 
     padding: 2px 0 2px 0;
     transition: opacity var(--default-duration);
@@ -100,7 +100,7 @@
     label {
       line-height: 14px;
       opacity: 0;
-      color: var(--color-text);
+      color: var(--text-primary-color);
 
       font-size: 10px;
       line-height: 11px;
@@ -113,7 +113,7 @@
     }
 
     &.error {
-      color: var(--color-destructive);
+      color: var(--danger-color);
     }
 
     input {
@@ -122,7 +122,7 @@
       height: 14px;
       width: 280px;
       background: transparent;
-      color: var(--color-text);
+      color: var(--input-text-color);
 
       font-family: $session-font-default;
       font-size: 12px;
@@ -130,10 +130,14 @@
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
+
+      &::placeholder {
+        color: var(--input-text-placeholder-color);
+      }
     }
 
     hr {
-      border: var(--border-session);
+      border: 1px solid var(--border-color);
 
       width: 100%;
       position: absolute;
@@ -151,7 +155,7 @@
   &-terms-conditions-agreement {
     padding-top: var(--margins-md);
 
-    color: var(--color-text-subtle);
+    color: var(--text-secondary-color);
     text-align: center;
     font-size: 12px;
 
@@ -159,15 +163,15 @@
       white-space: nowrap;
       font-weight: bold;
       text-decoration: none;
-      color: var(--color-text-subtle);
+      color: var(--text-secondary-color);
       transition: var(--default-duration);
 
       &:visited &:link {
-        color: var(--color-text-subtle);
+        color: var(--text-secondary-color);
       }
 
       &:hover {
-        color: var(--color-text);
+        color: var(--text-primary-color);
       }
     }
   }
@@ -176,7 +180,7 @@
     padding-top: 0;
     padding-bottom: 20px;
     // TODO Theming needs to be updated
-    color: rgba(black, 0.6);
+    color: rgba(var(--black-color), 0.6);
     text-align: center;
     font-size: 12px;
     line-height: 20px;
@@ -202,7 +206,7 @@
       outline: 0;
       border: none;
       background: transparent;
-      color: var(--color-text);
+      color: var(--text-primary-color);
       font-size: var(--font-size-md);
       line-height: 18px;
       text-align: center;
@@ -220,6 +224,6 @@
 [contenteditable='true']:empty::before {
   content: attr(placeholder);
 
-  color: var(--color-text-subtle);
+  color: var(--text-secondary-color);
   font-size: var(--font-size-sm);
 }
