fix: UI for link previews when the image is too less than 200px

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -152,10 +152,17 @@
   background: white;
   color: black;
   border-radius: var(--border-radius-message-box);
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  background-color: white; // TODO theming update // var(--message-link-preview-background-color)
   margin: var(--padding-link-preview);
 
   .module-image {
-    margin: -1px;
+    margin-bottom: 0;
+    border-radius: 0;
+    margin-top: -1px;
+    margin-left: -1px;
+    border-top-left-radius: var(--border-radius-message-box);
   }
 
   &__text {
@@ -164,25 +171,23 @@
 }
 
 .module-message__link-preview__content {
-  padding: 0 0 var(--margins-xs) 0;
   display: flex;
   flex-direction: row;
   align-items: center;
   flex-grow: 1;
-  margin-left: var(--margins-sm);
 }
 
 .module-message__link-preview__image_container {
-  margin: -2px;
   margin-inline-end: 8px;
   display: inline-block;
 }
 
 .module-message__link-preview__icon_container {
+  display: flex;
+  justify-content: center;
   flex: initial;
-  min-width: 54px;
-  width: 54px;
-  max-height: 54px;
+  width: 100px;
+  height: 100px;
   position: relative;
   margin-left: -2px;
   margin-inline-end: 8px;
