fix: center text Session on registration when overflowing in farsi

--- a/stylesheets/_session_signin.scss
+++ b/stylesheets/_session_signin.scss
@@ -11,6 +11,7 @@
     &-accent {
       &-text {
         font-family: $session-font-accent;
+        text-align: center;
         .title {
           font-size: 90px;
           font-weight: 700;
