--- a/stylesheets/manifest.scss
+++ b/stylesheets/manifest.scss
@@ -7,9 +7,8 @@
 @import '../node_modules/sanitize.css/forms.css';
 @import '../node_modules/sanitize.css/typography.css';
 
-// Global Settings, Variables, and Mixins
+// Global Settings and Mixins
 @import 'session_constants';
-@import 'variables';
 @import 'mixins';
 @import 'global';
 
