feat: moved remaning old theme globals to new globals

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -40,7 +40,8 @@ textarea {
 }
 
 ::selection {
-  background: var(--color-text-highlight);
+  // TODO Theming - See color
+  // background: var(--color-text-highlight);
 }
 
 .shadowed {
@@ -160,8 +161,7 @@ label {
 
 .conversation-header {
   .module-avatar img {
-    // TODO Theming Update
-    box-shadow: 0px 0px 5px 0px rgba(var(--color-white-color-rgb), 0.2);
+    box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.2);
   }
 
   .search-icon {
