feat: added text selection color to themes

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -40,8 +40,7 @@ textarea {
 }
 
 ::selection {
-  // TODO Theming - See color
-  // background: var(--color-text-highlight);
+  background: var(--text-selection-color);
 }
 
 .shadowed {
