--- a/stylesheets/_session_signin.scss
+++ b/stylesheets/_session_signin.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--background-primary-color);
+    color: var(--text-primary-color);
   }
   &-content {
     &-accent {
