fix: make sure password window has primary color set

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -153,6 +153,7 @@ textarea {
   // To limit messages with things forcing them wider, like long attachment names
   max-width: 100%;
   align-items: center;
+  border-radius: var(--border-radius-message-box);
 }
 label {
   user-select: none;
