fix: qa feedback - improve text-highlight text color for seed modal

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -313,7 +313,7 @@ label {
   &__text-highlight {
     @include text-highlight(var(--primary-color));
 
-    color: var(--modal-text-color);
+    color: var(--black-color);
 
     font-family: monospace;
     font-style: normal;
