fix: improved font rendering on windows by replacing all em units with rem
dropped unused emoji scss

--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -102,7 +102,7 @@ a {
   .message {
     -webkit-user-select: text;
     user-select: text;
-    max-width: 35em;
+    max-width: 35rem;
   }
 
   .dot {
