--- a/stylesheets/_index.scss
+++ b/stylesheets/_index.scss
@@ -31,7 +31,7 @@
 
   .module-avatar {
     display: block;
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
   }
 
   .avatar-center {
@@ -52,7 +52,7 @@
 .section-conversations-container {
   display: flex;
   flex-direction: row;
-  margin-inline-end: 3em;
+  margin-inline-end: 3rem;
   align-items: center;
 
   h4 {
