--- a/stylesheets/_session_signin.scss
+++ b/stylesheets/_session_signin.scss
@@ -69,7 +69,7 @@
       font-size: 14px;
       font-weight: 700;
       line-height: 14px;
-      padding-top: 2em;
+      padding-top: 2rem;
       text-align: center;
     }
 
