--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -420,7 +420,7 @@
 
   .session-button {
     width: 160px;
-    margin: 1em auto;
+    margin: 1rem auto;
   }
 }
 
@@ -957,7 +957,7 @@
   font-size: 14px;
 
   overflow: hidden;
-  height: 2.4em;
+  height: 2.4rem;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
