chore: remove parcel completely and grunt

--- a/stylesheets/manifest.scss
+++ b/stylesheets/manifest.scss
@@ -1,11 +1,11 @@
 // Modules
-@import '../node_modules/react-h5-audio-player/lib/styles.css';
-@import '../node_modules/react-contexify/dist/ReactContexify.min.css';
-@import '../node_modules/react-toastify/dist/ReactToastify.css';
+@import 'react-h5-audio-player/lib/styles.css';
+@import 'react-contexify/dist/ReactContexify.min.css';
+@import 'react-toastify/dist/ReactToastify.css';
 
-@import '../node_modules/sanitize.css/sanitize.css';
-@import '../node_modules/sanitize.css/forms.css';
-@import '../node_modules/sanitize.css/typography.css';
+@import 'sanitize.css/sanitize.css';
+@import 'sanitize.css/forms.css';
+@import 'sanitize.css/typography.css';
 
 // Global Settings and Mixins
 @import 'session_constants';
