feat: updated right panel in a conversation to use overlay logic in preparation for disappearing messages
added panel buttons specific to this UI

--- a/stylesheets/_rtl.scss
+++ b/stylesheets/_rtl.scss
@@ -3,7 +3,7 @@ body.rtl {
   textarea,
   .module-left-pane,
   .module-conversation-list-item,
-  .group-settings-item,
+  .right-panel-item,
   .contact-selection-list,
   .group-member-list__selection,
   .react-contexify__item {
