--- a/stylesheets/manifest.scss
+++ b/stylesheets/manifest.scss
@@ -35,7 +35,7 @@
 
 @import 'session_theme';
 @import 'session_left_pane';
-@import 'session_group_panel';
+@import 'session_right_panel';
 
 @import 'session_slider';
 @import 'session_conversation';
