--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -525,7 +525,7 @@ label {
 
 .session-settings {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background-color: var(--background-secondary-color);
