fix: noticebanner and scrollable right panel ui glitch

--- a/stylesheets/_session_group_panel.scss
+++ b/stylesheets/_session_group_panel.scss
@@ -1,7 +1,7 @@
 .group-settings {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   width: -webkit-fill-available;
 
   align-items: center;
