--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -1048,6 +1048,9 @@
 }
 
 // Module H5AudioPlayer
+$rhap_background-color: var(--transparent-color) !default;
+$rhap_font-family: inherit !default;
+
 .module-message__container--outgoing {
   .rhap_container {
     background-color: var(--message-bubbles-sent-background-color);
