--- a/stylesheets/_session_theme.scss
+++ b/stylesheets/_session_theme.scss
@@ -99,7 +99,8 @@
 }
 
 @mixin session-h-title {
-  @include fontAccentBold();
+  font-weight: bold;
+  font-family: var(--font-accent), var(--font-default);
 }
 
 h1 {
