--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -14,7 +14,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: $session-font-default;
+  font-family: var(--font-default);
   letter-spacing: 0.3px;
 }
 
