--- a/stylesheets/_session_constants.scss
+++ b/stylesheets/_session_constants.scss
@@ -2,81 +2,84 @@
 // /////////////////// Fonts ////////////////////
 // //////////////////////////////////////////////
 
-$session-font-default: 'Roboto';
-$session-font-accent: 'Loor';
-$session-font-mono: 'SpaceMono';
-
 @font-face {
-  font-family: $session-font-mono;
+  font-family: SpaceMono;
   src: url('../fonts/SpaceMono-Regular.ttf') format('truetype');
 }
 
-// Roboto is an open replacement for $session-font-default
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-Thin.ttf') format('truetype');
   font-weight: 100;
 }
+
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-ThinItalic.ttf') format('truetype');
   font-style: italic;
   font-weight: 100;
 }
+
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-Light.ttf') format('truetype');
   font-weight: 300;
 }
 
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-LightItalic.ttf') format('truetype');
   font-style: italic;
   font-weight: 300;
 }
+
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-Regular.ttf') format('truetype');
   font-weight: 400;
 }
+
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-Italic.ttf') format('truetype');
   font-style: italic;
   font-weight: 400;
 }
+
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-Medium.ttf') format('truetype');
   font-weight: 500;
 }
 
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-MediumItalic.ttf') format('truetype');
   font-style: italic;
   font-weight: 500;
 }
+
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-Bold.ttf') format('truetype');
   font-weight: 700;
 }
+
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
 }
+
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-Black.ttf') format('truetype');
   font-weight: 900;
 }
 
 @font-face {
-  font-family: $session-font-default;
+  font-family: Roboto;
   src: url('../fonts/Roboto-BlackItalic.ttf') format('truetype');
   font-weight: 900;
   font-style: italic;
@@ -84,18 +87,10 @@ $session-font-mono: 'SpaceMono';
 
 // Accented font
 @font-face {
-  font-family: $session-font-accent;
+  font-family: Loor; // Loor does not support some Cyrillic ghyphs so where we use it, we add a fallback to Roboto
   src: url('../fonts/Loor.ttf') format('truetype');
   line-height: 1.4rem;
 }
-
-// //////////////////////////////////////////////
-// ////////////////// Colors ////////////////////
-// //////////////////////////////////////////////
-
-// Opacity and Shadow
-$session-shadow-opacity: 0.15;
-$session-overlay-opacity: 0.3;
 
 // //////////////////////////////////////////////
 // /////////////////// Text /////////////////////
@@ -106,13 +101,7 @@ $session-font-xs: 11px;
 $session-font-sm: 13px;
 $session-font-md: 15px;
 
-$session-font-h2: 24px;
-
 // Mixins
-@mixin fontAccentBold {
-  font-weight: bold;
-  font-family: $session-font-accent;
-}
 
 @mixin text-highlight($color) {
   background-color: $color;
