fix: menu positioning after upgrade of dep

--- a/stylesheets/_rtl.scss
+++ b/stylesheets/_rtl.scss
@@ -6,7 +6,7 @@ body.rtl {
   .group-settings-item,
   .contact-selection-list,
   .group-member-list__selection,
-  .react-contexify__item {
+  .contexify_item {
     direction: rtl;
   }
 
