--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -554,7 +554,8 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  font-size: 28px;
+  margin-top: var(--margins-sm);
+  font-size: 16px;
 }
 
 // Module: Conversation List Item
